# iot

./: .envrc  .gitignore  ERROR_ANALYSIS.md  MULTIPROCESSING_ANALYSIS.md  camera.sh  camera_client.py  camera_server.py  can_wifi  check_audio_devices.py  check_cameras.py  config.py  environment.yml  fastapi_client.py  gps_lastfix.json  log.py  main.py  main_websocket.py  makefile  mobile.py  pyproject.toml  quick_camera_test.py  requirements.txt  servo.ino  test.py  test_camera_mic.py  test_csi.py  test_default_params.py  test_i2c_sensors.py  test_sensor_params.py  text.txt
ipynb/: test_audio.ipynb
jetson_nano/code/: main.py
mcp_server/: README.md  server.py
mobile/: config.py  monitored_audio_track.py  mqtt_handler.py  setup_audio.sh  utils.py  video_handler.py  webrtc_config.js  webrtc_handler.py
module/: gps.py  lane_segmentation.py  obstacle_detection.py  vad.py  voice_mic.py  voice_speaker.py
module/camera/: camera_direct.py
mqtt/: __init__.py  camera.py  client.py  gps.py  handlers.py  handlers_websocket.py  obstacle_detector.py  status.py  voice.py  webrtc_manager.py  websocket_manager.py
navigation/config/: settings.py
navigation/speech/: voice_mic.py  voice_speaker.py
script/: access.sh  quick_setup_vnc.sh  setup_gpio_permissions.sh  setup_novnc.sh  setup_vnc.sh  setup_vnc_dashboard.md
test/: camera.py  led.py  servo.py  speaker.py  test_audio_rates.py  test_gps_isolated.py  voice.py
