[project]
name = "iot"
version = "0.1.0"
description = "IoT System with MQTT, WebRTC, Camera, and AI capabilities"
requires-python = ">=3.10,<3.12"
dependencies = [
    # WebRTC và MQTT
    "aiortc>=1.3.0",
    "aiohttp>=3.8.0",
    "paho-mqtt>=2.1.0",
    # Media processing
    "av>=9.0.0",
    "opencv-python>=4.12.0",
    "numpy>=2.0.0",
    # Audio
    # Note: pyaudio requires portaudio-dev (install via: sudo apt-get install portaudio19-dev)
    # "pyaudio>=0.2.11",  # Uncomment after installing portaudio-dev
    "sounddevice>=0.5.2",
    "soundfile>=0.12.0",
    "pydub>=0.25.1",
    # Hardware interfaces
    "adafruit-blinka>=8.66.2",
    "adafruit-circuitpython-busdevice>=5.2.13",
    "adafruit-circuitpython-connectionmanager>=3.1.5",
    "adafruit-circuitpython-requests>=4.1.13",
    "adafruit-circuitpython-typing>=1.12.2",
    "adafruit-circuitpython-vl53l1x>=1.2.5",
    "adafruit-platformdetect>=3.84.0",
    "adafruit-pureio>=1.1.11",
    "jetson-gpio>=2.1.12",
    "pyserial>=3.5",
    "pyusb>=1.3.1",
    # GPS
    "pynmea2>=1.19.0",
    # Network và HTTP
    "requests>=2.32.5",
    "httpx>=0.28.1",
    "httpx-sse>=0.4.3",
    # MCP Server
    "mcp>=1.19.0",
    "openai>=2.6.1",
    "uvicorn>=0.38.0",
    "starlette>=0.48.0",
    "sse-starlette>=3.0.2",
    # Utilities
    "python-dotenv>=1.1.1",
    "pyyaml>=6.0.3",
    "pyzmq>=27.1.0",
    "pillow>=12.0.0",
    "scipy>=1.15.3",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
    "tqdm>=4.67.1",
    # Other
    "binho-host-adapter>=0.1.6",
    "distro>=1.9.0",
    "future>=1.0.0",
    "pyftdi>=0.57.1",
    "python-multipart>=0.0.20",
    "serial>=0.0.97",
    "sysv-ipc>=1.1.0",
    "toml>=0.10.2",
    "zmq>=0.0.0",
    "loguru>=0.7.3",
    "pyaudio>=0.2.14",
    "websockets>=15.0.1",
    "vl53l1x>=0.0.5",
    "pip>=25.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mqtt", "module", "mcp_server", "mobile"]
